new HTML helpers provided

--- a/unverified_media_list/htmlhelpers/bosnia.html
+++ b/unverified_media_list/htmlhelpers/bosnia.html
@@ -95,167 +95,167 @@ bosnia
 <h2>Unverified List</h2>
 
 
-<div id="92aa81">
+<div id="25b68f">
     <a href="http://bosnianmediagroup.com/" target="_blank">http://bosnianmediagroup.com/</a>
-    <span class="clickable" onclick="golocal('#92aa81');">local</span>
-    <span class="clickable" onclick="gonational('#92aa81');">national</span>
-    <span class="clickable" onclick="goblog('#92aa81');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#92aa81');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#92aa81', 'http://bosnianmediagroup.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#25b68f');">local</span>
+    <span class="clickable" onclick="gonational('#25b68f');">national</span>
+    <span class="clickable" onclick="goblog('#25b68f');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#25b68f');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#25b68f', 'http://bosnianmediagroup.com/');">show now</span>
 </div>
 
 
 
-<div id="110d98">
+<div id="683fa7">
     <a href="http://dnevni-list.ba/web1/" target="_blank">http://dnevni-list.ba/web1/</a>
-    <span class="clickable" onclick="golocal('#110d98');">local</span>
-    <span class="clickable" onclick="gonational('#110d98');">national</span>
-    <span class="clickable" onclick="goblog('#110d98');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#110d98');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#110d98', 'http://dnevni-list.ba/web1/');">show now</span>
+    <span class="clickable" onclick="golocal('#683fa7');">local</span>
+    <span class="clickable" onclick="gonational('#683fa7');">national</span>
+    <span class="clickable" onclick="goblog('#683fa7');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#683fa7');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#683fa7', 'http://dnevni-list.ba/web1/');">show now</span>
 </div>
 
 
 
-<div id="cab74b">
+<div id="de0ad1">
     <a href="https://www.bhdani.ba/" target="_blank">https://www.bhdani.ba/</a>
-    <span class="clickable" onclick="golocal('#cab74b');">local</span>
-    <span class="clickable" onclick="gonational('#cab74b');">national</span>
-    <span class="clickable" onclick="goblog('#cab74b');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#cab74b');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#cab74b', 'https://www.bhdani.ba/');">show now</span>
+    <span class="clickable" onclick="golocal('#de0ad1');">local</span>
+    <span class="clickable" onclick="gonational('#de0ad1');">national</span>
+    <span class="clickable" onclick="goblog('#de0ad1');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#de0ad1');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#de0ad1', 'https://www.bhdani.ba/');">show now</span>
 </div>
 
 
 
-<div id="f4f147">
+<div id="18d870">
     <a href="http://www.avaz.ba/" target="_blank">http://www.avaz.ba/</a>
-    <span class="clickable" onclick="golocal('#f4f147');">local</span>
-    <span class="clickable" onclick="gonational('#f4f147');">national</span>
-    <span class="clickable" onclick="goblog('#f4f147');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#f4f147');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#f4f147', 'http://www.avaz.ba/');">show now</span>
+    <span class="clickable" onclick="golocal('#18d870');">local</span>
+    <span class="clickable" onclick="gonational('#18d870');">national</span>
+    <span class="clickable" onclick="goblog('#18d870');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#18d870');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#18d870', 'http://www.avaz.ba/');">show now</span>
 </div>
 
 
 
-<div id="71a764">
+<div id="602bc5">
     <a href="http://www.balkanchronicle.com/" target="_blank">http://www.balkanchronicle.com/</a>
-    <span class="clickable" onclick="golocal('#71a764');">local</span>
-    <span class="clickable" onclick="gonational('#71a764');">national</span>
-    <span class="clickable" onclick="goblog('#71a764');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#71a764');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#71a764', 'http://www.balkanchronicle.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#602bc5');">local</span>
+    <span class="clickable" onclick="gonational('#602bc5');">national</span>
+    <span class="clickable" onclick="goblog('#602bc5');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#602bc5');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#602bc5', 'http://www.balkanchronicle.com/');">show now</span>
 </div>
 
 
 
-<div id="580933">
+<div id="a1de51">
     <a href="http://www.bosnia.org.uk/news/news_list.cfm" target="_blank">http://www.bosnia.org.uk/news/news_list.cfm</a>
-    <span class="clickable" onclick="golocal('#580933');">local</span>
-    <span class="clickable" onclick="gonational('#580933');">national</span>
-    <span class="clickable" onclick="goblog('#580933');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#580933');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#580933', 'http://www.bosnia.org.uk/news/news_list.cfm');">show now</span>
+    <span class="clickable" onclick="golocal('#a1de51');">local</span>
+    <span class="clickable" onclick="gonational('#a1de51');">national</span>
+    <span class="clickable" onclick="goblog('#a1de51');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#a1de51');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#a1de51', 'http://www.bosnia.org.uk/news/news_list.cfm');">show now</span>
 </div>
 
 
 
-<div id="4b8343">
+<div id="ca097f">
     <a href="http://www.e-novine.net/" target="_blank">http://www.e-novine.net/</a>
-    <span class="clickable" onclick="golocal('#4b8343');">local</span>
-    <span class="clickable" onclick="gonational('#4b8343');">national</span>
-    <span class="clickable" onclick="goblog('#4b8343');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#4b8343');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#4b8343', 'http://www.e-novine.net/');">show now</span>
+    <span class="clickable" onclick="golocal('#ca097f');">local</span>
+    <span class="clickable" onclick="gonational('#ca097f');">national</span>
+    <span class="clickable" onclick="goblog('#ca097f');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#ca097f');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#ca097f', 'http://www.e-novine.net/');">show now</span>
 </div>
 
 
 
-<div id="575436">
+<div id="644466">
     <a href="http://www.glassrpske.com/cyrl/" target="_blank">http://www.glassrpske.com/cyrl/</a>
-    <span class="clickable" onclick="golocal('#575436');">local</span>
-    <span class="clickable" onclick="gonational('#575436');">national</span>
-    <span class="clickable" onclick="goblog('#575436');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#575436');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#575436', 'http://www.glassrpske.com/cyrl/');">show now</span>
+    <span class="clickable" onclick="golocal('#644466');">local</span>
+    <span class="clickable" onclick="gonational('#644466');">national</span>
+    <span class="clickable" onclick="goblog('#644466');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#644466');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#644466', 'http://www.glassrpske.com/cyrl/');">show now</span>
 </div>
 
 
 
-<div id="38bca9">
+<div id="fb1f8d">
     <a href="http://www.nezavisne.com/" target="_blank">http://www.nezavisne.com/</a>
-    <span class="clickable" onclick="golocal('#38bca9');">local</span>
-    <span class="clickable" onclick="gonational('#38bca9');">national</span>
-    <span class="clickable" onclick="goblog('#38bca9');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#38bca9');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#38bca9', 'http://www.nezavisne.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#fb1f8d');">local</span>
+    <span class="clickable" onclick="gonational('#fb1f8d');">national</span>
+    <span class="clickable" onclick="goblog('#fb1f8d');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#fb1f8d');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#fb1f8d', 'http://www.nezavisne.com/');">show now</span>
 </div>
 
 
 
-<div id="3293b9">
+<div id="d8d737">
     <a href="http://www.nippljiljan.com/" target="_blank">http://www.nippljiljan.com/</a>
-    <span class="clickable" onclick="golocal('#3293b9');">local</span>
-    <span class="clickable" onclick="gonational('#3293b9');">national</span>
-    <span class="clickable" onclick="goblog('#3293b9');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#3293b9');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#3293b9', 'http://www.nippljiljan.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#d8d737');">local</span>
+    <span class="clickable" onclick="gonational('#d8d737');">national</span>
+    <span class="clickable" onclick="goblog('#d8d737');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#d8d737');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#d8d737', 'http://www.nippljiljan.com/');">show now</span>
 </div>
 
 
 
-<div id="a15e49">
+<div id="4c427f">
     <a href="http://www.sarajevotimes.com/" target="_blank">http://www.sarajevotimes.com/</a>
-    <span class="clickable" onclick="golocal('#a15e49');">local</span>
-    <span class="clickable" onclick="gonational('#a15e49');">national</span>
-    <span class="clickable" onclick="goblog('#a15e49');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#a15e49');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#a15e49', 'http://www.sarajevotimes.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#4c427f');">local</span>
+    <span class="clickable" onclick="gonational('#4c427f');">national</span>
+    <span class="clickable" onclick="goblog('#4c427f');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#4c427f');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#4c427f', 'http://www.sarajevotimes.com/');">show now</span>
 </div>
 
 
 
-<div id="de9d2a">
+<div id="48f2df">
     <a href="http://www.saray.net/Press/" target="_blank">http://www.saray.net/Press/</a>
-    <span class="clickable" onclick="golocal('#de9d2a');">local</span>
-    <span class="clickable" onclick="gonational('#de9d2a');">national</span>
-    <span class="clickable" onclick="goblog('#de9d2a');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#de9d2a');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#de9d2a', 'http://www.saray.net/Press/');">show now</span>
+    <span class="clickable" onclick="golocal('#48f2df');">local</span>
+    <span class="clickable" onclick="gonational('#48f2df');">national</span>
+    <span class="clickable" onclick="goblog('#48f2df');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#48f2df');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#48f2df', 'http://www.saray.net/Press/');">show now</span>
 </div>
 
 
 
-<div id="8f4a65">
+<div id="a7497f">
     <a href="http://www.slobodna-bosna.ba/" target="_blank">http://www.slobodna-bosna.ba/</a>
-    <span class="clickable" onclick="golocal('#8f4a65');">local</span>
-    <span class="clickable" onclick="gonational('#8f4a65');">national</span>
-    <span class="clickable" onclick="goblog('#8f4a65');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#8f4a65');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#8f4a65', 'http://www.slobodna-bosna.ba/');">show now</span>
+    <span class="clickable" onclick="golocal('#a7497f');">local</span>
+    <span class="clickable" onclick="gonational('#a7497f');">national</span>
+    <span class="clickable" onclick="goblog('#a7497f');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#a7497f');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#a7497f', 'http://www.slobodna-bosna.ba/');">show now</span>
 </div>
 
 
 
-<div id="77b105">
+<div id="f69d16">
     <a href="http://www.ultimatum.20m.com/" target="_blank">http://www.ultimatum.20m.com/</a>
-    <span class="clickable" onclick="golocal('#77b105');">local</span>
-    <span class="clickable" onclick="gonational('#77b105');">national</span>
-    <span class="clickable" onclick="goblog('#77b105');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#77b105');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#77b105', 'http://www.ultimatum.20m.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#f69d16');">local</span>
+    <span class="clickable" onclick="gonational('#f69d16');">national</span>
+    <span class="clickable" onclick="goblog('#f69d16');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#f69d16');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#f69d16', 'http://www.ultimatum.20m.com/');">show now</span>
 </div>
 
 
 
-<div id="3b8252">
+<div id="84a980">
     <a href="http://www.vijesti.ba/" target="_blank">http://www.vijesti.ba/</a>
-    <span class="clickable" onclick="golocal('#3b8252');">local</span>
-    <span class="clickable" onclick="gonational('#3b8252');">national</span>
-    <span class="clickable" onclick="goblog('#3b8252');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#3b8252');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#3b8252', 'http://www.vijesti.ba/');">show now</span>
+    <span class="clickable" onclick="golocal('#84a980');">local</span>
+    <span class="clickable" onclick="gonational('#84a980');">national</span>
+    <span class="clickable" onclick="goblog('#84a980');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#84a980');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#84a980', 'http://www.vijesti.ba/');">show now</span>
 </div>
 
 
