--- a/unverified_media_list/htmlhelpers/guatemal.html
+++ b/unverified_media_list/htmlhelpers/guatemal.html
@@ -95,79 +95,79 @@ guatemal
 <h2>Unverified List</h2>
 
 
-<div id="200d91">
+<div id="a4d4be">
     <a href="http://elquetzalteco.com.gt/" target="_blank">http://elquetzalteco.com.gt/</a>
-    <span class="clickable" onclick="golocal('#200d91');">local</span>
-    <span class="clickable" onclick="gonational('#200d91');">national</span>
-    <span class="clickable" onclick="goblog('#200d91');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#200d91');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#200d91', 'http://elquetzalteco.com.gt/');">show now</span>
+    <span class="clickable" onclick="golocal('#a4d4be');">local</span>
+    <span class="clickable" onclick="gonational('#a4d4be');">national</span>
+    <span class="clickable" onclick="goblog('#a4d4be');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#a4d4be');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#a4d4be', 'http://elquetzalteco.com.gt/');">show now</span>
 </div>
 
 
 
-<div id="9cafc5">
+<div id="9ab293">
     <a href="http://www.nuestrodiario.com/" target="_blank">http://www.nuestrodiario.com/</a>
-    <span class="clickable" onclick="golocal('#9cafc5');">local</span>
-    <span class="clickable" onclick="gonational('#9cafc5');">national</span>
-    <span class="clickable" onclick="goblog('#9cafc5');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#9cafc5');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#9cafc5', 'http://www.nuestrodiario.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#9ab293');">local</span>
+    <span class="clickable" onclick="gonational('#9ab293');">national</span>
+    <span class="clickable" onclick="goblog('#9ab293');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#9ab293');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#9ab293', 'http://www.nuestrodiario.com/');">show now</span>
 </div>
 
 
 
-<div id="1598e4">
+<div id="940c85">
     <a href="http://www.lahora.com.gt/" target="_blank">http://www.lahora.com.gt/</a>
-    <span class="clickable" onclick="golocal('#1598e4');">local</span>
-    <span class="clickable" onclick="gonational('#1598e4');">national</span>
-    <span class="clickable" onclick="goblog('#1598e4');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#1598e4');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#1598e4', 'http://www.lahora.com.gt/');">show now</span>
+    <span class="clickable" onclick="golocal('#940c85');">local</span>
+    <span class="clickable" onclick="gonational('#940c85');">national</span>
+    <span class="clickable" onclick="goblog('#940c85');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#940c85');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#940c85', 'http://www.lahora.com.gt/');">show now</span>
 </div>
 
 
 
-<div id="0d3a8c">
+<div id="30a00d">
     <a href="http://www.prensalibre.com/" target="_blank">http://www.prensalibre.com/</a>
-    <span class="clickable" onclick="golocal('#0d3a8c');">local</span>
-    <span class="clickable" onclick="gonational('#0d3a8c');">national</span>
-    <span class="clickable" onclick="goblog('#0d3a8c');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#0d3a8c');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#0d3a8c', 'http://www.prensalibre.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#30a00d');">local</span>
+    <span class="clickable" onclick="gonational('#30a00d');">national</span>
+    <span class="clickable" onclick="goblog('#30a00d');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#30a00d');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#30a00d', 'http://www.prensalibre.com/');">show now</span>
 </div>
 
 
 
-<div id="5f4f77">
+<div id="34023a">
     <a href="http://www.elperiodico.com.gt/" target="_blank">http://www.elperiodico.com.gt/</a>
-    <span class="clickable" onclick="golocal('#5f4f77');">local</span>
-    <span class="clickable" onclick="gonational('#5f4f77');">national</span>
-    <span class="clickable" onclick="goblog('#5f4f77');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#5f4f77');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#5f4f77', 'http://www.elperiodico.com.gt/');">show now</span>
+    <span class="clickable" onclick="golocal('#34023a');">local</span>
+    <span class="clickable" onclick="gonational('#34023a');">national</span>
+    <span class="clickable" onclick="goblog('#34023a');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#34023a');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#34023a', 'http://www.elperiodico.com.gt/');">show now</span>
 </div>
 
 
 
-<div id="6faeeb">
+<div id="e0437e">
     <a href="http://www.monedaenlinea.com/" target="_blank">http://www.monedaenlinea.com/</a>
-    <span class="clickable" onclick="golocal('#6faeeb');">local</span>
-    <span class="clickable" onclick="gonational('#6faeeb');">national</span>
-    <span class="clickable" onclick="goblog('#6faeeb');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#6faeeb');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#6faeeb', 'http://www.monedaenlinea.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#e0437e');">local</span>
+    <span class="clickable" onclick="gonational('#e0437e');">national</span>
+    <span class="clickable" onclick="goblog('#e0437e');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#e0437e');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#e0437e', 'http://www.monedaenlinea.com/');">show now</span>
 </div>
 
 
 
-<div id="724bef">
+<div id="8710d3">
     <a href="http://www.dca.gob.gt/" target="_blank">http://www.dca.gob.gt/</a>
-    <span class="clickable" onclick="golocal('#724bef');">local</span>
-    <span class="clickable" onclick="gonational('#724bef');">national</span>
-    <span class="clickable" onclick="goblog('#724bef');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#724bef');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#724bef', 'http://www.dca.gob.gt/');">show now</span>
+    <span class="clickable" onclick="golocal('#8710d3');">local</span>
+    <span class="clickable" onclick="gonational('#8710d3');">national</span>
+    <span class="clickable" onclick="goblog('#8710d3');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#8710d3');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#8710d3', 'http://www.dca.gob.gt/');">show now</span>
 </div>
 
 
