--- a/unverified_media_list/htmlhelpers/nigeria.html
+++ b/unverified_media_list/htmlhelpers/nigeria.html
@@ -95,13 +95,13 @@ nigeria
 <h2>Unverified List</h2>
 
 
-<div id="5946a8">
+<div id="82eb8e">
     <a href="http://www.newstimeafrica.com/archives/category/west-africa/niger" target="_blank">http://www.newstimeafrica.com/archives/category/west-africa/niger</a>
-    <span class="clickable" onclick="golocal('#5946a8');">local</span>
-    <span class="clickable" onclick="gonational('#5946a8');">national</span>
-    <span class="clickable" onclick="goblog('#5946a8');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#5946a8');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#5946a8', 'http://www.newstimeafrica.com/archives/category/west-africa/niger');">show now</span>
+    <span class="clickable" onclick="golocal('#82eb8e');">local</span>
+    <span class="clickable" onclick="gonational('#82eb8e');">national</span>
+    <span class="clickable" onclick="goblog('#82eb8e');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#82eb8e');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#82eb8e', 'http://www.newstimeafrica.com/archives/category/west-africa/niger');">show now</span>
 </div>
 
 
