--- a/unverified_media_list/htmlhelpers/palestin.html
+++ b/unverified_media_list/htmlhelpers/palestin.html
@@ -95,178 +95,178 @@ palestin
 <h2>Unverified List</h2>
 
 
-<div id="d82516">
+<div id="ff5fd1">
     <a href="http://www.freepal.net/" target="_blank">http://www.freepal.net/</a>
-    <span class="clickable" onclick="golocal('#d82516');">local</span>
-    <span class="clickable" onclick="gonational('#d82516');">national</span>
-    <span class="clickable" onclick="goblog('#d82516');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#d82516');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#d82516', 'http://www.freepal.net/');">show now</span>
+    <span class="clickable" onclick="golocal('#ff5fd1');">local</span>
+    <span class="clickable" onclick="gonational('#ff5fd1');">national</span>
+    <span class="clickable" onclick="goblog('#ff5fd1');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#ff5fd1');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#ff5fd1', 'http://www.freepal.net/');">show now</span>
 </div>
 
 
 
-<div id="bca4d9">
+<div id="71170b">
     <a href="http://www.hanitzotz.com/alsabar" target="_blank">http://www.hanitzotz.com/alsabar</a>
-    <span class="clickable" onclick="golocal('#bca4d9');">local</span>
-    <span class="clickable" onclick="gonational('#bca4d9');">national</span>
-    <span class="clickable" onclick="goblog('#bca4d9');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#bca4d9');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#bca4d9', 'http://www.hanitzotz.com/alsabar');">show now</span>
+    <span class="clickable" onclick="golocal('#71170b');">local</span>
+    <span class="clickable" onclick="gonational('#71170b');">national</span>
+    <span class="clickable" onclick="goblog('#71170b');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#71170b');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#71170b', 'http://www.hanitzotz.com/alsabar');">show now</span>
 </div>
 
 
 
-<div id="8a5071">
+<div id="d09515">
     <a href="http://www.sawt-alhaq.com/" target="_blank">http://www.sawt-alhaq.com/</a>
-    <span class="clickable" onclick="golocal('#8a5071');">local</span>
-    <span class="clickable" onclick="gonational('#8a5071');">national</span>
-    <span class="clickable" onclick="goblog('#8a5071');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#8a5071');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#8a5071', 'http://www.sawt-alhaq.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#d09515');">local</span>
+    <span class="clickable" onclick="gonational('#d09515');">national</span>
+    <span class="clickable" onclick="goblog('#d09515');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#d09515');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#d09515', 'http://www.sawt-alhaq.com/');">show now</span>
 </div>
 
 
 
-<div id="578454">
+<div id="a95b27">
     <a href="http://paltelegraph.com/" target="_blank">http://paltelegraph.com/</a>
-    <span class="clickable" onclick="golocal('#578454');">local</span>
-    <span class="clickable" onclick="gonational('#578454');">national</span>
-    <span class="clickable" onclick="goblog('#578454');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#578454');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#578454', 'http://paltelegraph.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#a95b27');">local</span>
+    <span class="clickable" onclick="gonational('#a95b27');">national</span>
+    <span class="clickable" onclick="goblog('#a95b27');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#a95b27');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#a95b27', 'http://paltelegraph.com/');">show now</span>
 </div>
 
 
 
-<div id="f31b70">
+<div id="efc70c">
     <a href="http://www.al-ayyam.com/" target="_blank">http://www.al-ayyam.com/</a>
-    <span class="clickable" onclick="golocal('#f31b70');">local</span>
-    <span class="clickable" onclick="gonational('#f31b70');">national</span>
-    <span class="clickable" onclick="goblog('#f31b70');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#f31b70');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#f31b70', 'http://www.al-ayyam.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#efc70c');">local</span>
+    <span class="clickable" onclick="gonational('#efc70c');">national</span>
+    <span class="clickable" onclick="goblog('#efc70c');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#efc70c');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#efc70c', 'http://www.al-ayyam.com/');">show now</span>
 </div>
 
 
 
-<div id="ad79ae">
+<div id="3993cb">
     <a href="http://www.alhayat-j.com/newsite/index.php" target="_blank">http://www.alhayat-j.com/newsite/index.php</a>
-    <span class="clickable" onclick="golocal('#ad79ae');">local</span>
-    <span class="clickable" onclick="gonational('#ad79ae');">national</span>
-    <span class="clickable" onclick="goblog('#ad79ae');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#ad79ae');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#ad79ae', 'http://www.alhayat-j.com/newsite/index.php');">show now</span>
+    <span class="clickable" onclick="golocal('#3993cb');">local</span>
+    <span class="clickable" onclick="gonational('#3993cb');">national</span>
+    <span class="clickable" onclick="goblog('#3993cb');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#3993cb');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#3993cb', 'http://www.alhayat-j.com/newsite/index.php');">show now</span>
 </div>
 
 
 
-<div id="fadaaf">
+<div id="37361a">
     <a href="http://www.alquds.com/" target="_blank">http://www.alquds.com/</a>
-    <span class="clickable" onclick="golocal('#fadaaf');">local</span>
-    <span class="clickable" onclick="gonational('#fadaaf');">national</span>
-    <span class="clickable" onclick="goblog('#fadaaf');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#fadaaf');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#fadaaf', 'http://www.alquds.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#37361a');">local</span>
+    <span class="clickable" onclick="gonational('#37361a');">national</span>
+    <span class="clickable" onclick="goblog('#37361a');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#37361a');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#37361a', 'http://www.alquds.com/');">show now</span>
 </div>
 
 
 
-<div id="872b68">
+<div id="745efb">
     <a href="http://www.alsbah.com/" target="_blank">http://www.alsbah.com/</a>
-    <span class="clickable" onclick="golocal('#872b68');">local</span>
-    <span class="clickable" onclick="gonational('#872b68');">national</span>
-    <span class="clickable" onclick="goblog('#872b68');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#872b68');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#872b68', 'http://www.alsbah.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#745efb');">local</span>
+    <span class="clickable" onclick="gonational('#745efb');">national</span>
+    <span class="clickable" onclick="goblog('#745efb');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#745efb');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#745efb', 'http://www.alsbah.com/');">show now</span>
 </div>
 
 
 
-<div id="f321ff">
+<div id="d3b996">
     <a href="http://www.assabeel.net/" target="_blank">http://www.assabeel.net/</a>
-    <span class="clickable" onclick="golocal('#f321ff');">local</span>
-    <span class="clickable" onclick="gonational('#f321ff');">national</span>
-    <span class="clickable" onclick="goblog('#f321ff');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#f321ff');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#f321ff', 'http://www.assabeel.net/');">show now</span>
+    <span class="clickable" onclick="golocal('#d3b996');">local</span>
+    <span class="clickable" onclick="gonational('#d3b996');">national</span>
+    <span class="clickable" onclick="goblog('#d3b996');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#d3b996');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#d3b996', 'http://www.assabeel.net/');">show now</span>
 </div>
 
 
 
-<div id="33a0e2">
+<div id="4d4df7">
     <a href="http://www.alray-aam.net/" target="_blank">http://www.alray-aam.net/</a>
-    <span class="clickable" onclick="golocal('#33a0e2');">local</span>
-    <span class="clickable" onclick="gonational('#33a0e2');">national</span>
-    <span class="clickable" onclick="goblog('#33a0e2');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#33a0e2');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#33a0e2', 'http://www.alray-aam.net/');">show now</span>
+    <span class="clickable" onclick="golocal('#4d4df7');">local</span>
+    <span class="clickable" onclick="gonational('#4d4df7');">national</span>
+    <span class="clickable" onclick="goblog('#4d4df7');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#4d4df7');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#4d4df7', 'http://www.alray-aam.net/');">show now</span>
 </div>
 
 
 
-<div id="b4faa1">
+<div id="025ed7">
     <a href="http://www.jerusalem-times.net/" target="_blank">http://www.jerusalem-times.net/</a>
-    <span class="clickable" onclick="golocal('#b4faa1');">local</span>
-    <span class="clickable" onclick="gonational('#b4faa1');">national</span>
-    <span class="clickable" onclick="goblog('#b4faa1');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#b4faa1');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#b4faa1', 'http://www.jerusalem-times.net/');">show now</span>
+    <span class="clickable" onclick="golocal('#025ed7');">local</span>
+    <span class="clickable" onclick="gonational('#025ed7');">national</span>
+    <span class="clickable" onclick="goblog('#025ed7');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#025ed7');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#025ed7', 'http://www.jerusalem-times.net/');">show now</span>
 </div>
 
 
 
-<div id="f0a41c">
+<div id="5267d1">
     <a href="http://www.wafa.pna.net/arabic/index.php" target="_blank">http://www.wafa.pna.net/arabic/index.php</a>
-    <span class="clickable" onclick="golocal('#f0a41c');">local</span>
-    <span class="clickable" onclick="gonational('#f0a41c');">national</span>
-    <span class="clickable" onclick="goblog('#f0a41c');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#f0a41c');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#f0a41c', 'http://www.wafa.pna.net/arabic/index.php');">show now</span>
+    <span class="clickable" onclick="golocal('#5267d1');">local</span>
+    <span class="clickable" onclick="gonational('#5267d1');">national</span>
+    <span class="clickable" onclick="goblog('#5267d1');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#5267d1');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#5267d1', 'http://www.wafa.pna.net/arabic/index.php');">show now</span>
 </div>
 
 
 
-<div id="b7a5f1">
+<div id="e80d0f">
     <a href="http://www.aldaar.com/" target="_blank">http://www.aldaar.com/</a>
-    <span class="clickable" onclick="golocal('#b7a5f1');">local</span>
-    <span class="clickable" onclick="gonational('#b7a5f1');">national</span>
-    <span class="clickable" onclick="goblog('#b7a5f1');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#b7a5f1');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#b7a5f1', 'http://www.aldaar.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#e80d0f');">local</span>
+    <span class="clickable" onclick="gonational('#e80d0f');">national</span>
+    <span class="clickable" onclick="goblog('#e80d0f');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#e80d0f');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#e80d0f', 'http://www.aldaar.com/');">show now</span>
 </div>
 
 
 
-<div id="0a9872">
+<div id="8ace55">
     <a href="http://www.sonara.net/" target="_blank">http://www.sonara.net/</a>
-    <span class="clickable" onclick="golocal('#0a9872');">local</span>
-    <span class="clickable" onclick="gonational('#0a9872');">national</span>
-    <span class="clickable" onclick="goblog('#0a9872');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#0a9872');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#0a9872', 'http://www.sonara.net/');">show now</span>
+    <span class="clickable" onclick="golocal('#8ace55');">local</span>
+    <span class="clickable" onclick="gonational('#8ace55');">national</span>
+    <span class="clickable" onclick="goblog('#8ace55');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#8ace55');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#8ace55', 'http://www.sonara.net/');">show now</span>
 </div>
 
 
 
-<div id="41700c">
+<div id="ff98d7">
     <a href="http://www.palestine-info.info/index.htm" target="_blank">http://www.palestine-info.info/index.htm</a>
-    <span class="clickable" onclick="golocal('#41700c');">local</span>
-    <span class="clickable" onclick="gonational('#41700c');">national</span>
-    <span class="clickable" onclick="goblog('#41700c');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#41700c');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#41700c', 'http://www.palestine-info.info/index.htm');">show now</span>
+    <span class="clickable" onclick="golocal('#ff98d7');">local</span>
+    <span class="clickable" onclick="gonational('#ff98d7');">national</span>
+    <span class="clickable" onclick="goblog('#ff98d7');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#ff98d7');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#ff98d7', 'http://www.palestine-info.info/index.htm');">show now</span>
 </div>
 
 
 
-<div id="c33525">
+<div id="c9733f">
     <a href="http://www.samidoon.com/" target="_blank">http://www.samidoon.com/</a>
-    <span class="clickable" onclick="golocal('#c33525');">local</span>
-    <span class="clickable" onclick="gonational('#c33525');">national</span>
-    <span class="clickable" onclick="goblog('#c33525');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#c33525');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#c33525', 'http://www.samidoon.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#c9733f');">local</span>
+    <span class="clickable" onclick="gonational('#c9733f');">national</span>
+    <span class="clickable" onclick="goblog('#c9733f');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#c9733f');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#c9733f', 'http://www.samidoon.com/');">show now</span>
 </div>
 
 
