--- a/unverified_media_list/htmlhelpers/cambodia.html
+++ b/unverified_media_list/htmlhelpers/cambodia.html
@@ -95,90 +95,90 @@ cambodia
 <h2>Unverified List</h2>
 
 
-<div id="488581">
+<div id="503246">
     <a href="http://www.cambodgesoir.info/" target="_blank">http://www.cambodgesoir.info/</a>
-    <span class="clickable" onclick="golocal('#488581');">local</span>
-    <span class="clickable" onclick="gonational('#488581');">national</span>
-    <span class="clickable" onclick="goblog('#488581');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#488581');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#488581', 'http://www.cambodgesoir.info/');">show now</span>
+    <span class="clickable" onclick="golocal('#503246');">local</span>
+    <span class="clickable" onclick="gonational('#503246');">national</span>
+    <span class="clickable" onclick="goblog('#503246');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#503246');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#503246', 'http://www.cambodgesoir.info/');">show now</span>
 </div>
 
 
 
-<div id="c2973c">
+<div id="203a04">
     <a href="http://www.cen.com.kh/" target="_blank">http://www.cen.com.kh/</a>
-    <span class="clickable" onclick="golocal('#c2973c');">local</span>
-    <span class="clickable" onclick="gonational('#c2973c');">national</span>
-    <span class="clickable" onclick="goblog('#c2973c');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#c2973c');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#c2973c', 'http://www.cen.com.kh/');">show now</span>
+    <span class="clickable" onclick="golocal('#203a04');">local</span>
+    <span class="clickable" onclick="gonational('#203a04');">national</span>
+    <span class="clickable" onclick="goblog('#203a04');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#203a04');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#203a04', 'http://www.cen.com.kh/');">show now</span>
 </div>
 
 
 
-<div id="547bce">
+<div id="ea2d17">
     <a href="http://www.phnompenhpost.com/" target="_blank">http://www.phnompenhpost.com/</a>
-    <span class="clickable" onclick="golocal('#547bce');">local</span>
-    <span class="clickable" onclick="gonational('#547bce');">national</span>
-    <span class="clickable" onclick="goblog('#547bce');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#547bce');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#547bce', 'http://www.phnompenhpost.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#ea2d17');">local</span>
+    <span class="clickable" onclick="gonational('#ea2d17');">national</span>
+    <span class="clickable" onclick="goblog('#ea2d17');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#ea2d17');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#ea2d17', 'http://www.phnompenhpost.com/');">show now</span>
 </div>
 
 
 
-<div id="dbe682">
+<div id="05e560">
     <a href="http://www3.vocri.org/" target="_blank">http://www3.vocri.org/</a>
-    <span class="clickable" onclick="golocal('#dbe682');">local</span>
-    <span class="clickable" onclick="gonational('#dbe682');">national</span>
-    <span class="clickable" onclick="goblog('#dbe682');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#dbe682');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#dbe682', 'http://www3.vocri.org/');">show now</span>
+    <span class="clickable" onclick="golocal('#05e560');">local</span>
+    <span class="clickable" onclick="gonational('#05e560');">national</span>
+    <span class="clickable" onclick="goblog('#05e560');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#05e560');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#05e560', 'http://www3.vocri.org/');">show now</span>
 </div>
 
 
 
-<div id="4fcf68">
+<div id="0c092a">
     <a href="http://www.cambodiantimes.com/" target="_blank">http://www.cambodiantimes.com/</a>
-    <span class="clickable" onclick="golocal('#4fcf68');">local</span>
-    <span class="clickable" onclick="gonational('#4fcf68');">national</span>
-    <span class="clickable" onclick="goblog('#4fcf68');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#4fcf68');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#4fcf68', 'http://www.cambodiantimes.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#0c092a');">local</span>
+    <span class="clickable" onclick="gonational('#0c092a');">national</span>
+    <span class="clickable" onclick="goblog('#0c092a');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#0c092a');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#0c092a', 'http://www.cambodiantimes.com/');">show now</span>
 </div>
 
 
 
-<div id="ad3587">
+<div id="92ff0b">
     <a href="http://kohsantepheapdaily.com.kh/" target="_blank">http://kohsantepheapdaily.com.kh/</a>
-    <span class="clickable" onclick="golocal('#ad3587');">local</span>
-    <span class="clickable" onclick="gonational('#ad3587');">national</span>
-    <span class="clickable" onclick="goblog('#ad3587');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#ad3587');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#ad3587', 'http://kohsantepheapdaily.com.kh/');">show now</span>
+    <span class="clickable" onclick="golocal('#92ff0b');">local</span>
+    <span class="clickable" onclick="gonational('#92ff0b');">national</span>
+    <span class="clickable" onclick="goblog('#92ff0b');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#92ff0b');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#92ff0b', 'http://kohsantepheapdaily.com.kh/');">show now</span>
 </div>
 
 
 
-<div id="5dc928">
+<div id="58b68d">
     <a href="http://www.cambodianonline.net" target="_blank">http://www.cambodianonline.net</a>
-    <span class="clickable" onclick="golocal('#5dc928');">local</span>
-    <span class="clickable" onclick="gonational('#5dc928');">national</span>
-    <span class="clickable" onclick="goblog('#5dc928');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#5dc928');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#5dc928', 'http://www.cambodianonline.net');">show now</span>
+    <span class="clickable" onclick="golocal('#58b68d');">local</span>
+    <span class="clickable" onclick="gonational('#58b68d');">national</span>
+    <span class="clickable" onclick="goblog('#58b68d');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#58b68d');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#58b68d', 'http://www.cambodianonline.net');">show now</span>
 </div>
 
 
 
-<div id="cf82c7">
+<div id="4ff0c4">
     <a href="http://www.cambodiadaily.com/" target="_blank">http://www.cambodiadaily.com/</a>
-    <span class="clickable" onclick="golocal('#cf82c7');">local</span>
-    <span class="clickable" onclick="gonational('#cf82c7');">national</span>
-    <span class="clickable" onclick="goblog('#cf82c7');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#cf82c7');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#cf82c7', 'http://www.cambodiadaily.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#4ff0c4');">local</span>
+    <span class="clickable" onclick="gonational('#4ff0c4');">national</span>
+    <span class="clickable" onclick="goblog('#4ff0c4');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#4ff0c4');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#4ff0c4', 'http://www.cambodiadaily.com/');">show now</span>
 </div>
 
 
